docs (backend): Fixed GetWorkoutsByExercise docs
